added css with a mobile UI approach

--- a/index.html
+++ b/index.html
@@ -9,14 +9,38 @@
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <script src="https://use.fontawesome.com/93cfa67ec9.js"></script>
   <link rel="stylesheet" href="vendor/css/normalize.css">
-  <link rel="stylesheet" href="vnedor/css/skeleton.css">
+  <link rel="stylesheet" href="vendor/css/skeleton.css">
   <link rel="icon" type="image/png" href="assets/images/favicon-anchor.ico">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/modules.css">
 </head>
 <body>
+  <header class="site-header clearfix">
+    <section id="home">
+      <h1 class="heading-group">gnoevil</h1>
+      <h6 class="heading-group">The portfolio of a warrior - Geno Guerrero</h6>
+    </section>
+    <nav class="main-nav">
+      <div class="icon-menu fa fa-bars" aria-hidden="true"></div>
+        <ul>
+          <li class="tab"><a href="#home" class="fa fa-home" aria-hidden="true">Home</a></li>
+          <li class="tab"><a href="#about" class="fa fa-user-secret" aria-hidden="true">About</a></li>
+          <li class="tab"><a href="#portfolio" class="fa fa-folder-open" aria-hidden="true">Portfolio</a></li>
+          <li class="tab"><a href="https://github.com/gnoevil" class="fa fa-github" aria-hidden="true">GitHub</a></li>
+        </ul>
+    </nav>
+  </header>
   <div class="container">
-    <div class="row">
+    <div id="about" class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
+        <h4>About me</h4>
+        <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
+      </div>
+    </div>
+    <div id="portfolio" class="row">
+      <div class="one-half column" style="margin-top: 25%">
+        <h4>Projects</h4>
         <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
       </div>
     </div>
