--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <div id="about" class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>About me</h4>
-        <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
+        <div>
+          <img class="one-third column" src="assets/images/geno-profile.jpg" alt="Geno's profile picture"></img>
+          <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
+        </div>
       </div>
     </div>
     <div id="portfolio" class="row">
