--- a/index.html
+++ b/index.html
@@ -33,20 +33,25 @@
   </header>
   <div class="container">
     <div id="about" class="row">
-      <div class="one-half column" style="margin-top: 25%">
+      <div class="" >
         <h4>About me</h4>
-        <div>
-          <img class="one-third column" src="assets/images/geno-profile.jpg" alt="Geno's profile picture"></img>
-          <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
+          <div class="profile-pic pull-left"></div>
+          <div class="profile-intro"><p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p></div>
+      </div>
+    </div>
+    <section id="projects">
+      <h4 class="heading-group">Projects</h4>
+      <div class="template" class="row">
+        <div class="one-half column">
+          <h5 class="heading-group pname"><a href="#">Name of Project</a></h5>
+          <h6 class="heading-group pdate">02-2-16</h6>
+          <p class="description">This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
         </div>
       </div>
-    </div>
-    <div id="portfolio" class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Projects</h4>
-        <p>This is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
-      </div>
-    </div>
+    </section>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+  <script src="js/projects.js" charset="utf-8"></script>
+  <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
