--- a/index.html
+++ b/index.html
@@ -1,66 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Guerrero = Warrior</title>
-  <meta name="description" content="Portfolio">
-  <meta name="author" content="Geno Guerrero">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <script src="https://use.fontawesome.com/93cfa67ec9.js"></script>
-  <link rel="stylesheet" href="vendor/css/normalize.css">
-  <link rel="stylesheet" href="vendor/css/skeleton.css">
-  <link rel="icon" type="image/png" href="assets/images/favicon-anchor.ico">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/modules.css">
-  <script id="project-template" type="text/x-handlebars-template">
-    <div class="row">
-      <div class="one-half column">
-        <h5 class="pname heading-group"><a href="{{purl}}">{{pname}}</a></h5>
-        <h6 class="pdate heading-group">{{pdate}}</h6>
-        <p class="description">{{description}}</p>
-      </div>
-    </div>
-  </script>
-
-</script>
-</head>
-<body>
-  <header class="site-header clearfix">
-    <div id="logo">
-      <h1 class="heading-group">gnoevil</h1>
-      <h6 class="heading-group">The portfolio of a warrior - Geno Guerrero</h6>
-    </div>
-    <nav class="main-nav">
-      <div class="icon-menu fa fa-bars" aria-hidden="true"></div>
-      <ul>
-        <li class="tab"><a href="#home" class="fa fa-home" aria-hidden="true">Home</a></li>
-        <li class="tab"><a href="#about" class="fa fa-user-secret" aria-hidden="true">About</a></li>
-        <li class="tab"><a href="#portfolio" class="fa fa-folder-open" aria-hidden="true">Portfolio</a></li>
-        <li class="tab"><a href="https://github.com/gnoevil" class="fa fa-github" aria-hidden="true">GitHub</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="home" class="row">
-      <h4 class="heading-group">Welcome to the home of a warrior.</h4>
-    </section>
-    <section id="about" class="row">
-      <h4 class="heading-group">About me</h4>
-      <div class="" >
-        <div class="profile-pic pull-left"></div>
-        <div class="profile-intro"><p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p></div>
-      </div>
-    </section>
-    <h4 class="heading-group">Projects</h4>
-    <section id="projects">
-     
-    </section>
-  </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-  <script src=" https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js" charset="utf-8"></script>
-  <script src="js/projects.js" charset="utf-8"></script>
-  <script src="js/app.js" charset="utf-8"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Guerrero = Warrior</title>
+    <meta name="description" content="Portfolio">
+    <meta name="author" content="Geno Guerrero">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="vendor/css/normalize.css">
+    <link rel="stylesheet" href="vendor/css/skeleton.css">
+     <script src="https://use.fontawesome.com/93cfa67ec9.js"></script>
+    <link rel="stylesheet" href="css/icons.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/modules.css">
+    <!-- gnoevil favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon-anchor.ico">
+    <script id="article-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-project="{{title}}" data-category="{{category}}">
+        <header>
+          <h3>{{title}}</h3>
+          <div class="byline">
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
+            {{publishStatus}}
+          </div>
+        </header>
+        <section class="article-body">{{{body}}}</section>
+        <a href="#" class="read-on">Read on &rarr;</a>
+      </article>
+    </script>
+    <script id="project-filter-template" type="text/x-handlebars-template">
+      <option value="{{title}}">{{title}}</option>
+    </script>
+    <script id="category-filter-template" type="text/x-handlebars-template">
+      <option value="{{category}}">{{category}}</option>
+    </script>
+  </head>
+  <body>
+    <header class="site-header clearfix">
+      <section class="heading-group-h1">
+        <h1>
+          gnoevil
+        </h1>
+        <h5>The portfolio of a warrior - Geno Guerrero</h5>
+      </section>
+      <nav class="main-nav">
+        <div class="icon-menu"></div>
+        <ul>
+          <li class="tab" data-content="articles"><a href="/" class="icon-home"> Home</a></li>
+          <li class="tab" data-content="about"><a href="/about" class="icon-address-book"> About</a></li>
+          <li><a href="http://twitter.com/gnoevil" target="_blank" class="icon-twitter3"> Twitter</a></li>
+          <li><a href="https://github.com/gnoevil" target="_blank" class="icon-github"> GitHub</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="ajax-spinner">
+        <h3>Retrieving latest posts ...</h3>
+        <img src="vendor/assets/gears.gif">
+      </section>
+      <section id="articles" class="tab-content">
+        <div>
+          <ul id="filters">
+            <li>
+              <select id="project-filter">
+                <option value="">-- Filter by Projects --</option>
+              </select>
+            </li>
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Language --</option>
+              </select>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="about" class="tab-content">
+        <header>
+          <h1>About me</h1>
+        </header>
+        <section>
+          <h3>Some of my interests:</h3>
+          <ul>
+            <li>Coding</li>
+            <li>Sharing what I've learned</li>
+            <li>Hanging with my family</li>
+          </ul>
+          <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p>
+        </section>
+      </section>
+    </main>
+    <footer>
+      &copy; 2016 gnoevil | MVC Portfolio | Happy Coding!
+    </footer>
+    <!-- Vendor Files -->
+    <script src="vendor/scripts/page.js"></script>
+    <script src="vendor/scripts/jquery-2.1.4.js"></script>
+    <script src="vendor/scripts/handlebars.js"></script>
+    <script src="vendor/scripts/marked.js"></script>
+    <script src="vendor/scripts/html5sql.js"></script>
+    <script src="vendor/scripts/webdb.js"></script>
+    <!-- Model Files -->
+    <script src="scripts/models/article.js"></script>
+    <!-- View Files -->
+    <script src="scripts/views/articleView.js"></script>
+    <!-- Controller Files -->
+    <script src="scripts/controllers/aboutController.js"></script>
+    <script src="scripts/controllers/articleController.js"></script>
+    <script src="scripts/controllers/routes.js"></script>
+  </body>
 </html>
